# alza-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/alza_cli/: __init__.py  actions.py  browser.py  cache.py  cli.py  config.py  debug.py  errors.py  models.py  output.py  parsers.py  patch_playwright.py
